source_product/9.10/sys.A.B9.10/analyze/obj.300/y.output

state 0
	$accept : _command $end 
	cmds : _    (4)

	$end  reduce 4
	error  shift 4
	TBUF  shift 15
	TFRAME  shift 25
	TPORT  shift 27
	TINODE  shift 28
	TPDIR  shift 33
	TPROC  shift 35
	TSHMEM  shift 45
	TSWBUF  shift 23
	TTEXT  shift 46
	TDUMP  shift 50
	TSHOW  shift 5
	TSNAP  shift 10
	TSCAN  shift 13
	TSYM  shift 49
	TBINARY  shift 56
	TREALTIME  shift 6
	TLTOR  shift 47
	THELP  shift 48
	TVFILE  shift 57
	TSETMASK  shift 54
	TSEARCH  shift 55
	TXDUMP  shift 52
	TPTYINFO  shift 42
	TPTTY  shift 43
	TTTY  shift 44
	TSEMA  shift 26
	TMUXDATA  shift 39
	TMUXCAMDATA  shift 40
	TMUXHWDATA  shift 41
	TCMAP  shift 24
	TWIZ  shift 8
	TFIXBUG  shift 9
	TLOOK  shift 7
	TSETOPT  shift 12
	TLISTDUMP  shift 38
	TLISTCOUNT  shift 37
	TPREGION  shift 17
	TREGION  shift 20
	TSWAPTAB  shift 21
	TDBD  shift 22
	TPFDAT  shift 16
	TSYSMAP  shift 18
	TSHMMAP  shift 19
	TSAVESTATE  shift 51
	TDRIVER  shift 14
	TPRINT  shift 36
	TPDIRHASH  shift 34
	TQUIT  shift 11
	TVNODE  shift 29
	TRNODE  shift 30
	TCRED  shift 31
	TFILE  shift 32
	TSTKTRC  shift 53
	\n  shift 2
	?  shift 67
	h  shift 68
	q  shift 66
	=  shift 63
	:  shift 64
	$  shift 65
	.  error

	command  goto 1
	cmds  goto 3
	equal_c  goto 58
	colon_c  goto 59
	dollar_c  goto 60
	q_c  goto 61
	h_c  goto 62

state 1
	$accept :  command_$end 

	$end  accept
	.  error


state 2
	command :  \n_    (1)

	.  reduce 1


state 3
	command :  cmds_    (2)

	.  reduce 2


state 4
	command :  error_\n 

	\n  shift 69
	.  error


state 5
	cmds :  TSHOW_showopt oredir \n 
	showopt : _    (129)

	TSYMBOL  shift 71
	TVMSTATS  shift 72
	TVMADDR  shift 73
	TIOSTATS  shift 74
	TDNLCSTATS  shift 75
	.  reduce 129

	showopt  goto 70

state 6
	cmds :  TREALTIME_\n 

	\n  shift 76
	.  error


state 7
	cmds :  TLOOK_\n 

	\n  shift 77
	.  error


state 8
	cmds :  TWIZ_\n 

	\n  shift 78
	.  error


state 9
	cmds :  TFIXBUG_\n 

	\n  shift 79
	.  error


state 10
	cmds :  TSNAP_\n 

	\n  shift 80
	.  error


state 11
	cmds :  TQUIT_\n 

	\n  shift 81
	.  error


state 12
	cmds :  TSETOPT_scanopt \n 
	scanopt : _    (135)

	TSCANOP  shift 83
	.  reduce 135

	scanopt  goto 82

state 13
	cmds :  TSCAN_scanopt oredir \n 
	scanopt : _    (135)

	TSCANOP  shift 83
	.  reduce 135

	scanopt  goto 84

state 14
	cmds :  TDRIVER_string \n 
	cmds :  TDRIVER_\n 

	TSTRING  shift 87
	\n  shift 86
	.  error

	string  goto 85

state 15
	cmds :  TBUF_devblk opt oredir \n 
	cmds :  TBUF_error \n 
	devblk : _    (150)

	error  shift 89
	NUMBER  shift 109
	TGR  reduce 150
	TGR2  reduce 150
	TCMHASH  shift 91
	TCMTOPG  shift 92
	TPGTOCM  shift 95
	TBTOC  shift 96
	TCTOB  shift 97
	TPTOB  shift 93
	TBTOP  shift 94
	TKMXTOB  shift 98
	TBTOKMX  shift 99
	TUPADD  shift 100
	TUVADD  shift 101
	TPGTOPDE  shift 102
	TVTOI  shift 103
	TITOV  shift 104
	-  shift 105
	\n  reduce 150
	h  reduce 150
	q  reduce 150
	$  shift 106
	(  shift 108
	@  shift 107
	a  reduce 150
	b  reduce 150
	c  reduce 150
	d  reduce 150
	e  reduce 150
	f  reduce 150
	g  reduce 150
	i  reduce 150
	j  reduce 150
	k  reduce 150
	l  reduce 150
	m  reduce 150
	n  reduce 150
	o  reduce 150
	p  reduce 150
	r  reduce 150
	s  reduce 150
	t  reduce 150
	u  reduce 150
	v  reduce 150
	w  reduce 150
	x  reduce 150
	y  reduce 150
	z  reduce 150
	.  error

	devblk  goto 88
	term  goto 90

state 16
	cmds :  TPFDAT_devblk opt oredir \n 
	cmds :  TPFDAT_error \n 
	devblk : _    (150)

	error  shift 111
	NUMBER  shift 109
	TGR  reduce 150
	TGR2  reduce 150
	TCMHASH  shift 91
	TCMTOPG  shift 92
	TPGTOCM  shift 95
	TBTOC  shift 96
	TCTOB  shift 97
	TPTOB  shift 93
	TBTOP  shift 94
	TKMXTOB  shift 98
	TBTOKMX  shift 99
	TUPADD  shift 100
	TUVADD  shift 101
	TPGTOPDE  shift 102
	TVTOI  shift 103
	TITOV  shift 104
	-  shift 105
	\n  reduce 150
	h  reduce 150
	q  reduce 150
	$  shift 106
	(  shift 108
	@  shift 107
	a  reduce 150
	b  reduce 150
	c  reduce 150
	d  reduce 150
	e  reduce 150
	f  reduce 150
	g  reduce 150
	i  reduce 150
	j  reduce 150
	k  reduce 150
	l  reduce 150
	m  reduce 150
	n  reduce 150
	o  reduce 150
	p  reduce 150
	r  reduce 150
	s  reduce 150
	t  reduce 150
	u  reduce 150
	v  reduce 150
	w  reduce 150
	x  reduce 150
	y  reduce 150
	z  reduce 150
	.  error

	devblk  goto 110
	term  goto 90

state 17
	cmds :  TPREGION_devblk opt oredir \n 
	cmds :  TPREGION_error \n 
	devblk : _    (150)

	error  shift 113
	NUMBER  shift 109
	TGR  reduce 150
	TGR2  reduce 150
	TCMHASH  shift 91
	TCMTOPG  shift 92
	TPGTOCM  shift 95
	TBTOC  shift 96
	TCTOB  shift 97
	TPTOB  shift 93
	TBTOP  shift 94
	TKMXTOB  shift 98
	TBTOKMX  shift 99
	TUPADD  shift 100
	TUVADD  shift 101
	TPGTOPDE  shift 102
	TVTOI  shift 103
	TITOV  shift 104
	-  shift 105
	\n  reduce 150
	h  reduce 150
	q  reduce 150
	$  shift 106
	(  shift 108
	@  shift 107
	a  reduce 150
	b  reduce 150
	c  reduce 150
	d  reduce 150
	e  reduce 150
	f  reduce 150
	g  reduce 150
	i  reduce 150
	j  reduce 150
	k  reduce 150
	l  reduce 150
	m  reduce 150
	n  reduce 150
	o  reduce 150
	p  reduce 150
	r  reduce 150
	s  reduce 150
	t  reduce 150
	u  reduce 150
	v  reduce 150
	w  reduce 150
	x  reduce 150
	y  reduce 150
	z  reduce 150
	.  error

	devblk  goto 112
	term  goto 90

state 18
	cmds :  TSYSMAP_devblk opt oredir \n 
	cmds :  TSYSMAP_error \n 
	devblk : _    (150)

	error  shift 115
	NUMBER  shift 109
	TGR  reduce 150
	TGR2  reduce 150
	TCMHASH  shift 91
	TCMTOPG  shift 92
	TPGTOCM  shift 95
	TBTOC  shift 96
	TCTOB  shift 97
	TPTOB  shift 93
	TBTOP  shift 94
	TKMXTOB  shift 98
	TBTOKMX  shift 99
	TUPADD  shift 100
	TUVADD  shift 101
	TPGTOPDE  shift 102
	TVTOI  shift 103
	TITOV  shift 104
	-  shift 105
	\n  reduce 150
	h  reduce 150
	q  reduce 150
	$  shift 106
	(  shift 108
	@  shift 107
	a  reduce 150
	b  reduce 150
	c  reduce 150
	d  reduce 150
	e  reduce 150
	f  reduce 150
	g  reduce 150
	i  reduce 150
	j  reduce 150
	k  reduce 150
	l  reduce 150
	m  reduce 150
	n  reduce 150
	o  reduce 150
	p  reduce 150
	r  reduce 150
	s  reduce 150
	t  reduce 150
	u  reduce 150
	v  reduce 150
	w  reduce 150
	x  reduce 150
	y  reduce 150
	z  reduce 150
	.  error

	devblk  goto 114
	term  goto 90

state 19
	cmds :  TSHMMAP_devblk opt oredir \n 
	cmds :  TSHMMAP_error \n 
	devblk : _    (150)

	error  shift 117
	NUMBER  shift 109
	TGR  reduce 150
	TGR2  reduce 150
	TCMHASH  shift 91
	TCMTOPG  shift 92
	TPGTOCM  shift 95
	TBTOC  shift 96
	TCTOB  shift 97
	TPTOB  shift 93
	TBTOP  shift 94
	TKMXTOB  shift 98
	TBTOKMX  shift 99
	TUPADD  shift 100
	TUVADD  shift 101
	TPGTOPDE  shift 102
	TVTOI  shift 103
	TITOV  shift 104
	-  shift 105
	\n  reduce 150
	h  reduce 150
	q  reduce 150
	$  shift 106
	(  shift 108
	@  shift 107
	a  reduce 150
	b  reduce 150
	c  reduce 150
	d  reduce 150
	e  reduce 150
	f  reduce 150
	g  reduce 150
	i  reduce 150
	j  reduce 150
	k  reduce 150
	l  reduce 150
	m  reduce 150
	n  reduce 150
	o  reduce 150
	p  reduce 150
	r  reduce 150
	s  reduce 150
	t  reduce 150
	u  reduce 150
	v  reduce 150
	w  reduce 150
	x  reduce 150
	y  reduce 150
	z  reduce 150
	.  error

	devblk  goto 116
	term  goto 90

state 20
	cmds :  TREGION_devblk opt oredir \n 
	cmds :  TREGION_error \n 
	devblk : _    (150)

	error  shift 119
	NUMBER  shift 109
	TGR  reduce 150
	TGR2  reduce 150
	TCMHASH  shift 91
	TCMTOPG  shift 92
	TPGTOCM  shift 95
	TBTOC  shift 96
	TCTOB  shift 97
	TPTOB  shift 93
	TBTOP  shift 94
	TKMXTOB  shift 98
	TBTOKMX  shift 99
	TUPADD  shift 100
	TUVADD  shift 101
	TPGTOPDE  shift 102
	TVTOI  shift 103
	TITOV  shift 104
	-  shift 105
	\n  reduce 150
	h  reduce 150
	q  reduce 150
	$  shift 106
	(  shift 108
	@  shift 107
	a  reduce 150
	b  reduce 150
	c  reduce 150
	d  reduce 150
	e  reduce 150
	f  reduce 150
	g  reduce 150
	i  reduce 150
	j  reduce 150
	k  reduce 150
	l  reduce 150
	m  reduce 150
	n  reduce 150
	o  reduce 150
	p  reduce 150
	r  reduce 150
	s  reduce 150
	t  reduce 150
	u  reduce 150
	v  reduce 150
	w  reduce 150
	x  reduce 150
	y  reduce 150
	z  reduce 150
	.  error

	devblk  goto 118
	term  goto 90

state 21
	cmds :  TSWAPTAB_devblk opt oredir \n 
	cmds :  TSWAPTAB_error \n 
	devblk : _    (150)

	error  shift 121
	NUMBER  shift 109
	TGR  reduce 150
	TGR2  reduce 150
	TCMHASH  shift 91
	TCMTOPG  shift 92
	TPGTOCM  shift 95
	TBTOC  shift 96
	TCTOB  shift 97
	TPTOB  shift 93
	TBTOP  shift 94
	TKMXTOB  shift 98
	TBTOKMX  shift 99
	TUPADD  shift 100
	TUVADD  shift 101
	TPGTOPDE  shift 102
	TVTOI  shift 103
	TITOV  shift 104
	-  shift 105
	\n  reduce 150
	h  reduce 150
	q  reduce 150
	$  shift 106
	(  shift 108
	@  shift 107
	a  reduce 150
	b  reduce 150
	c  reduce 150
	d  reduce 150
	e  reduce 150
	f  reduce 150
	g  reduce 150
	i  reduce 150
	j  reduce 150
	k  reduce 150
	l  reduce 150
	m  reduce 150
	n  reduce 150
	o  reduce 150
	p  reduce 150
	r  reduce 150
	s  reduce 150
	t  reduce 150
	u  reduce 150
	v  reduce 150
	w  reduce 150
	x  reduce 150
	y  reduce 150
	z  reduce 150
	.  error

	devblk  goto 120
	term  goto 90

state 22
	cmds :  TDBD_devblk opt oredir \n 
	cmds :  TDBD_error \n 
	devblk : _    (150)
